# boondi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
docs/: Commands.md  InterestingLibraries.md
src/main/: OpenGLUtils.hpp  main.cpp
src/main/bun/: DBConstants.hpp  DBTypes.hpp
src/main/constants/: GeneralConstants.hpp
src/main/example/: Boolinq.hpp  BoostYap.hpp  Hana.hpp  HyriseSQLParser.hpp  Linq.hpp  OpenCLExamples.hpp  PegtlMain.hpp  PerfTests.hpp  SOCIExamples.hpp
src/main/example/language/: LexyLang.hpp
src/main/example/reflection/: refl.hpp
src/main/models/: Status.hpp
src/main/utils/: FileSystemUtils.hpp  Log.hpp  Options.hpp  Singleton.hpp  StringUtils.hpp  TypeUtils.hpp
